2006-11-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: add callbacks for piecewise operations.
	* ext/oci8/oraconf.rb: add an error message for intel mac.
	* ext/oci8/bind.c: add OCI8::BindType::Long and
	    OCI8::BindType::LongRaw.
	* ext/oci8/stmt.c: fix OCI8::Cursor#define, OCI8::Cursor#bind_param,
	    OCI8::Cursor#exec and OCI8::Cursor#fetch for piecewise operations.
	* ext/oci8/lob.c, ext/oci8/oradate.c, ext/oci8/ocinumber.c,
	  ext/oci8/rowid.c, ext/oci8/ocidatetime.c, ext/oci8/oranumber.c:
	    follow up the change of piecewise operations.
	* lib/oci8/oci8.rb: use OCI8::BindType::Long and
	    OCI8::BindType::LongRaw for LONG and LONG RAW respectively.

2006-08-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate.hash().
	* ext/oci8/oranumber.c: OraNumber.new() now accepts a String.
	* lib/oci8/oci8.rb: add YAML support for OraDate and OraNumber.
	* test/test_oranumber.rb: add testcases for OraNumber.new(aString).

2006-08-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c:
	    Use long instead of int to bind Fixnum.
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-08-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-07-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate#dup, OraDate#clone, OraDate#_dump
	    and OraDate._load.
	* ext/oci8/oranumber.c: add OraNumber#dup, OraNumber#clone,
	    OraNumber#_dump and OraNumber._load.
	* ext/oci8/rowid.c: add OCIRowid#dup, OCIRowid#clone.
	    These methods raise an error when using Oracle 8.x.
	* test/test_oradate.rb: add tests for OraDate#dup, OraDate#clone,